--- a/Req/templates/index.html
+++ b/Req/templates/index.html
@@ -5,18 +5,20 @@
             Sign Up
         </title>
         <link rel="stylesheet" href="css/style.css">
+        <script type="text/javascript" src="D:\UNI\Spring 2021\Software Engineering\labs\lab 2\lab 2\Req\templates\js\utils.js">
+
+        </script>
         <!--
             TODO: add reference external style.css file
         -->
     </head>
     <body>
+
     <!--
         TODO: add alert_welcome function from external utils.js file
         TODO: call alert_welcome
     -->
-    <script src="utils.js">
 
-    </script>
     <!--
 
         TODO: create html components to capture user input
@@ -34,7 +36,7 @@
       <label>Password: </label>
       <input type="password" name="" value="">
       <br> <br>
-      <input type="submit" name="" >
+      <input type="submit" onclick="alert_welcome()" >
     </form>
       </body>
 </html>
