--- a/Req/templates/index.html
+++ b/Req/templates/index.html
@@ -5,7 +5,7 @@
             Sign Up
         </title>
         <link rel="stylesheet" href="css/style.css">
-        <script type="text/javascript" src="D:\UNI\Spring 2021\Software Engineering\labs\lab 2\lab 2\Req\templates\js\utils.js">
+        <script type="text/javascript" src="js\utils.js">
 
         </script>
         <!--
@@ -26,15 +26,15 @@
         TODO: add styling from style.css to submit button
     -->
     <br><br><br><br><br><br><br><br><br><br>
-    <form class="" action="index.html" method="post">
+    <form  action="index.html" method="post">
       <label>Email: </label>
-      <input type="email" name="" value="">
+      <input type="text" name="email" value="">
       <br> <br>
       <label>Username: </label>
-      <input type="text" name="" value="">
+      <input type="text" name="username" value="">
       <br> <br>
       <label>Password: </label>
-      <input type="password" name="" value="">
+      <input type="text" name="password" value="">
       <br> <br>
       <input type="submit" onclick="alert_welcome()" >
     </form>
