--- a/Req/templates/index.html
+++ b/Req/templates/index.html
@@ -4,10 +4,8 @@
         <title>
             Sign Up
         </title>
-        <link rel="stylesheet" href="css/style.css">
-        <script type="text/javascript" src="js\utils.js">
-
-        </script>
+        <link rel="stylesheet" href="../static/css/style.css"/>
+        <script type="text/javascript" src="../static/js\utils.js"></script>
         <!--
             TODO: add reference external style.css file
         -->
@@ -26,7 +24,7 @@
         TODO: add styling from style.css to submit button
     -->
     <br><br><br><br><br><br><br><br><br><br>
-    <form  action="index.html" method="post">
+    <form  action="/index" method="post">
       <label>Email: </label>
       <input type="text" name="email" value="">
       <br> <br>
